# dpg-gilded-rose

./: .coverage  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  result.txt  texttest_fixture.py
gilded_rose/: gilded_rose.py  item_factory.py
tests/: test_gilded_rose.py  texttest_fixture.py
